1999-07-12  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub.el (java-print-native-class): Print setting phase
	methods in Objective-C stubs for both creating and using phase 
	implementations.

1999-07-09  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-print-javadoc-default-contructor): New
	function.  Print out a default constructor message for javadoc.
	(java-print-class-constructor-method): Use it there are no
	arguments to the constructor (i.e. not a convenience constructor).
	(java-print-class-phase): If a `USING' phase class, also append
	the name of the using phase protocol to the list of `implemented'
	protocols.

1999-07-06  Alex Lancaster  <alex@santafe.edu>

	* java-stub.el (java-run-all-javadoc): Only call java-print-class
	if protocol is CREATABLE.
	(java-run-all-javadoc): Make function interactive.

1999-07-03  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-native-method): Add JNIEXPORT before
	return type and JNICALL after.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* javacswarm.in: Run JAVAC with eval.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-class-phase): Remove conditional
	on creatable-p.
	(java-print-classes): Put it here.
	Move java-print-makefiles to java-run-all.
	(java-print-makefiles): Split protocols into creatable
	and noncreatable variables.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-class-phase): Don't print Impl classes
	when protocol is not creatable.
	(included-method-p): Remove exclusion for non-creatable protocols.

1999-06-29  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub.el (*removed-methods*): Add VarProbe methods for array
	operations and string operations due to freaky types and type
	problems with strings[] being const char.
	(*removed-protocols*): Remove VarProbe.

1999-06-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
